--- a/templates/insert_new_student.html
+++ b/templates/insert_new_student.html
@@ -3,7 +3,7 @@
 
 <h1>New Student</h1>
 
-<form action="/new_student">
+<form action="/new_student", method = "POST">
 <label for="firstname">Enter First Name:</label>
 <input type="text" name="firstname" /><br>
 <label for="lastname">Enter Last Name:</label>
